# GameEngine

./: .gitignore  CMakeLists.txt  GameEngine.sln  LICENSE.txt
Engine/: Engine.vcxproj
Engine/include/Engine/: Engine.hpp
Engine/include/Engine/Window/: Window.hpp
Engine/include/Objects/: Objects.hpp
Engine/include/Scripts/: MainScript.hpp
Engine/include/Window/: Window.hpp
Engine/src/: Objects.cpp  Window.cpp  main.cpp
GLAD/: CMakeLists.txt
GLAD/include/KHR/: khrplatform.h
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
GLFW/include/GLFW/: glfw3.h  glfw3native.h
GLFW/src/: cocoa_init.m  cocoa_joystick.m  cocoa_monitor.m  cocoa_platform.h  cocoa_time.c  cocoa_window.m  context.c  egl_context.c  egl_context.h  glx_context.c  glx_context.h  init.c  input.c  internal.h  linux_joystick.c  mappings.h  mappings.h.in  monitor.c  nsgl_context.h  nsgl_context.m  null_init.c  null_joystick.c  null_monitor.c  null_window.c  osmesa_context.c  osmesa_context.h  posix_thread.c  posix_time.c  vulkan.c  wgl_context.c  wgl_context.h  win32_init.c  win32_joystick.c  win32_joystick.h  win32_monitor.c  win32_platform.h  win32_thread.c  win32_window.c  window.c  wl_init.c  (+8 more)
Scripts/: MainScript.cpp
Scripts/include/: MainScript.hpp
Scripts/include/Scripts/: MainScript.hpp
Scripts/src/: MainScript.cpp
